Home page changed to Diary

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,11 +16,12 @@ html
             block sidebar
               ul(class='sidebar-nav')
                 li
-                  a(href='/') Home
-                li
-                  a(href='/customers') Zákazníci
+                  a(href='/') Diář
                 li
                   a(href='/visits') Objednávky
+                li
+                  a(href='/customers') Zákazníci
+
                   hr
                 li
                   a(href='/customers/create') Nový zákazník
