--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,3 +3,12 @@
     padding: 0;
     list-style: none;
 }
+
+#date,
+#datetime_local,
+#select,
+#text,
+#textarea {
+    margin: .4rem 0;
+    width:300px;
+}
